@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.122 2006/04/26 21:30:02 karl Exp $
+$Id: NEWS,v 1.123 2006/05/05 16:31:37 karl Exp $
 This NEWS file records noteworthy changes, very tersely.
 See the manual for detailed information.
 
@@ -25,6 +25,7 @@ convenience, here's a url to one of the relevant sections:
 * Language:
   . new command @allowcodebreaks to control breaks at _ and - within @code.
   . new command @frenchspacing to control spacing after sentences.
+  . new command @fonttextsize to allow changing body text font size to 10pt.
 * makeinfo:
   . improved Docbook output.
   . @enddots{} outputs three dots instead of four, for consistency with
